Use PIC for static library
The reason for the static library is that it is typically linked into
other _dynamic_ libraries (not executables). We therefore need to make
sure to use PIC.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set_target_properties(zsf-static PROPERTIES
     COMPILE_DEFINITIONS "ZSF_STATIC"
     OUTPUT_NAME "zsf-static"
     PUBLIC_HEADER "include/zsf.h"
+    POSITION_INDEPENDENT_CODE ON
 )
 
 set(INSTALL_TARGETS zsf zsf-static)
