--- a/wrappers/python/tox.ini
+++ b/wrappers/python/tox.ini
@@ -1,11 +1,15 @@
 [tox]
 envlist =
-  flake8,black
+  flake8,black,py{36,37,38}
 
 
 [testenv]
-deps = pytest
+deps =
+  pytest
+  numpy
+  cffi
 extras = all
+commands = pytest tests
 
 
 [testenv:flake8]
@@ -16,7 +20,7 @@ deps =
   flake8-comprehensions
   flake8-import-order
   pep8-naming
-commands = flake8 src setup.py
+commands = flake8 src tests setup.py
 
 
 [testenv:black]
@@ -24,4 +28,4 @@ skip_install = True
 deps =
     black
 commands =
-    black --line-length 100 --target-version py36 --check --diff src setup.py
+    black --line-length 100 --target-version py36 --check --diff src tests setup.py
