CI/CD: Execute tests as soon as linux build completes
The Windows build can be rather slow, because it needs to spin up a VM.
The tests only rely on the Linux build, so we can already run them
before the Windows build stage completes.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,6 +98,7 @@ build:windows:
   script:
     - cd wrappers/python
     - tox -vv --installpkg wheelhouse/*.whl
+  needs: ["build:linux"]
 
 test:py36:linux:
   <<: *unittests
