--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
   - build
   - test
   - package
+  - deploy
 
 # style
 style:c:
@@ -141,3 +142,63 @@ package:
     expire_in: 2 hrs
     paths:
       - package/
+
+# deploy
+.job_template: &deployrelease
+  stage: deploy
+  only:
+    # Only deploy refs that start with "v"
+    - /^v.*$/
+  except:
+    # If a branch happens to start with "v", skip it as we only want to
+    # deploy tags.
+    - branches
+
+deploy:s3-gitlab:
+  <<: *deployrelease
+  image: python:3.6
+  before_script:
+    - pip install awscli
+  variables:
+    AWS_DEFAULT_REGION: eu-central-1
+    BUCKET_NAME: deltares-zsf-downloads
+  script:
+    - aws s3 cp package s3://${BUCKET_NAME}/${CI_COMMIT_TAG} --recursive
+    # The python files contain the tags, that may or may not be normalized.
+    # We grep the files we have to be sure we have the correct filename
+    - cd package/pyzsf
+    - fname_pyzsf_linux=$(ls | grep -m1 "manylinux.*.whl")
+    - fname_pyzsf_win32=$(ls | grep -m1 "win32.whl")
+    - fname_pyzsf_amd64=$(ls | grep -m1 "win_amd64.whl")
+    - cd ../..
+    # Release to GitLab
+    - s3="https://${BUCKET_NAME}.s3.${AWS_DEFAULT_REGION}.amazonaws.com/${CI_COMMIT_TAG}"
+    - |
+      release=$(cat <<EOS
+      {
+        "name": "${CI_COMMIT_TAG}",
+        "tag_name": "${CI_COMMIT_TAG}",
+        "description": "",
+        "assets": {
+          "links": [
+            { "name": "Excel Workbook",
+              "url": "$s3/excel/zsf-excel.zip" },
+            { "name": "Python wheel - linux amd64",
+              "url": "$s3/pyzsf/$fname_pyzsf_linux" },
+            { "name": "Python wheel - Windows 64 bits",
+              "url": "$s3/pyzsf/$fname_pyzsf_amd64" },
+            { "name": "Python wheel - Windows 32 bits",
+              "url": "$s3/pyzsf/$fname_pyzsf_win32" },
+            { "name": "Libraries - linux amd64",
+              "url": "$s3/libraries/libzsf-linux-amd64.tar.gz" },
+            { "name": "Libraries - Windows 64 bits",
+              "url": "$s3/libraries/libzsf-windows-amd64.zip" },
+            { "name": "Libraries - Windows 32 bits",
+              "url": "$s3/libraries/libzsf-windows-386.zip" }
+          ]
+        }
+      }
+      EOS
+      )
+    - echo $release
+    - 'curl -f --header "Content-Type: application/json" --header "PRIVATE-TOKEN: $DEPLOY_TOKEN" --data "$release" --request POST "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/releases"'
