Docs: Add initial version of docs on the API, theory and examples
The theory part of the documentation is based on a document provided to
the Directorate-General for Public Works and Water Management on the
workings of the ZSF. Said document has been translated to English, with
improvements/corrections made along the way while writing it in
reStructuredText.

Note that the original setup of the ZSF was that of only steady state.
This is somewhat reflected in how the theory documentation is set up in
this commit (and its source document). With the advent of phase-wise
solving, it may make more sense to discuss that first, and consider
steady-state solving a special case to be discussed after. That possible
improvement will be left for a future (set of) commits.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ stages:
   - test
   - package
   - deploy
+  - documentation
 
 # style
 style:c:
@@ -206,3 +207,21 @@ deploy:pypi:
   script:
     - pip install twine
     - twine upload -u __token__ -p $PYPI_TOKEN package/pyzsf/*
+
+# documentation
+pages:
+  image: python:3.6
+  stage: documentation
+  before_script:
+    - echo "documentation"
+  script:
+    - cd docs
+    - pip install -r requirements.txt
+    - make html
+    - mv _build/html ../public
+    - cd ..
+  artifacts:
+    paths:
+      - public
+  only:
+    - master
