--- a/wrappers/python/tox.ini
+++ b/wrappers/python/tox.ini
@@ -26,6 +26,6 @@ commands = flake8 src tests setup.py
 [testenv:black]
 skip_install = True
 deps =
-    black
+    black==19.10b
 commands =
     black --line-length 100 --target-version py36 --check --diff src tests setup.py
