--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,10 +77,10 @@ build:windows:
     - '& "C:\\Program Files\\CMake\\bin\\cmake.exe" -G "Visual Studio 16 2019" -A x64 -S . -B "build64" -DUSE_FAST_MATH=ON -DUSE_FAST_TANH=ON -DCMAKE_INSTALL_PREFIX:FILEPATH=../dist64'
     - '& "C:\\Program Files\\CMake\\bin\\cmake.exe" --build build64 --config Release --target Install'
     - cd wrappers/python
-    - '& "C:\Python36-32\python.exe" -m pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org wheel>=0.35.0'
-    - '& "C:\Python36-32\python.exe" setup.py build_ext --library-dirs=../../dist32/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp36'
+    - '& "C:\Python36-32\python.exe" -m pip install wheel>=0.35.0'
+    - '& "C:\Python36-32\python.exe" setup.py build_ext --trusted-host files.pythonhosted.org --library-dirs=../../dist32/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp36'
     - '& "C:\Python36-64\python.exe" -m pip install --trusted-host pypi.org --trusted-host files.pythonhosted.org wheel>=0.35.0'
-    - '& "C:\Python36-64\python.exe" setup.py build_ext --library-dirs=../../dist64/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp36'
+    - '& "C:\Python36-64\python.exe" setup.py build_ext --trusted-host files.pythonhosted.org --library-dirs=../../dist64/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp36'
   extends:
     - .shared_windows_runners
   artifacts:
