--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,6 +121,18 @@ test:py38:linux:
   variables:
     TOXENV: py38
 
+test:fortran:linux:
+  image: debian:stable
+  stage: test
+  before_script:
+    - apt-get update
+    - apt-get install -y build-essential git cmake gfortran
+  script:
+    - cd wrappers/fortran
+    - gfortran -fdefault-real-8 -o test zsf.f90 test.f90 ../../dist/lib/libzsf-static.a
+    - ./test
+  needs: ["build:linux"]
+
 # package
 package:
   image: debian:stable
@@ -130,7 +142,7 @@ package:
     - apt-get install -y zip
   script:
     # Prepare
-    - mkdir package package/pyzsf package/excel package/libraries
+    - mkdir package package/pyzsf package/excel package/fortran package/libraries
     # Libraries
     - cd dist64; zip -r ../package/libraries/libzsf-windows-amd64.zip *; cd ..
     - cd dist32; zip -r ../package/libraries/libzsf-windows-386.zip *; cd ..
@@ -140,6 +152,8 @@ package:
     - cp -R wrappers/python/wheelhouse/* package/pyzsf
     # Excel
     - zip -j package/excel/zsf-excel.zip dist64/bin/zsf.dll dist32/bin/zsf-stdcall.dll wrappers/excel/zsf.xlsm
+    # Fortran
+    - zip -j package/fortran/zsf-fortran-interface.zip wrappers/fortran/zsf.f90
   artifacts:
     expire_in: 2 hrs
     paths:
@@ -196,7 +210,9 @@ deploy:s3-gitlab:
             { "name": "Libraries - Windows 64 bits",
               "url": "$s3/libraries/libzsf-windows-amd64.zip" },
             { "name": "Libraries - Windows 32 bits",
-              "url": "$s3/libraries/libzsf-windows-386.zip" }
+              "url": "$s3/libraries/libzsf-windows-386.zip" },
+            { "name": "Fortran interface",
+              "url": "$s3/fortran/zsf-fortran-interface.zip" },
           ]
         }
       }
