--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -212,7 +212,7 @@ deploy:s3-gitlab:
             { "name": "Libraries - Windows 32 bits",
               "url": "$s3/libraries/libzsf-windows-386.zip" },
             { "name": "Fortran interface",
-              "url": "$s3/fortran/zsf-fortran-interface.zip" },
+              "url": "$s3/fortran/zsf-fortran-interface.zip" }
           ]
         }
       }
