--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install and update dependencies
         run: |
-          apt-get update
-          apt-get install -y clang-format git
+          sudo apt-get update
+          sudo apt-get install -y clang-format git
       - name: Check C code formatting
         run: |
           clang-format -i src/* include/*
