--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,9 @@ jobs:
         run: |
           mkdir build
           cd build
+          echo "yo"
+          pwd
+          echo "huh"
           /opt/python/cp36-cp36m/bin/cmake -DUSE_FAST_MATH=ON -DUSE_FAST_TANH=ON -DCMAKE_INSTALL_PREFIX=../dist -DCMAKE_BUILD_TYPE=Release ..
           make -j4 install
       - name: Where am I
@@ -66,7 +69,9 @@ jobs:
           pwd
       - name: Build wheel
         run: |
+          echo "yo2"
           pwd
+          echo "huh2"
           cd ..
           ls -alh
           cd wrappers
