--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download 32- and 64-bits version of Python
+        shell: pwsh
         # Chocolatey does not offer maintained 32-bits versions of Python, so we
         # install both 32- and 64-bit versions manually.
         # [Net.ServicePointManager]::SecurityProtocol = "tls12, tls11, tls"
@@ -98,6 +99,7 @@ jobs:
         Start-Process -Wait ".\python-3.6.8-amd64.exe" -ArgumentList "/quiet TargetDir=C:\Python36-64 InstallAllUsers=1 Include_launcher=0 Include_doc=0 Include_tcltk=0 Include_test=0"
 
       - name: Install CMake using Python
+        shell: pwsh
         # With Chocolatey we can get "Too many requests" errors, so we use the
         # CMake provided via PyPI. Just to be doubly sure, we let each Python
         # version have its own install of CMake.
@@ -106,6 +108,7 @@ jobs:
         & "C:\Python36-64\python.exe" -m pip install cmake wheel>=0.35.0 certifi
 
       - name: Build both 32-bit and 64-bit versions
+        shell: pwsh
         run: |
         & "C:\\Python36-32\\Scripts\\cmake.exe" -G "Visual Studio 16 2019" -A Win32 -S . -B "build32" -DUSE_FAST_MATH=ON -DUSE_FAST_TANH=ON -DCMAKE_INSTALL_PREFIX:FILEPATH=../dist32
         & "C:\\Python36-32\\Scripts\\cmake.exe" --build build32 --config Release --target Install
