--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,6 +92,8 @@ jobs:
         # Chocolatey does not offer maintained 32-bits versions of Python, so we
         # install both 32- and 64-bit versions manually.
         run: |
+          pwd
+          ls C:
           [Net.ServicePointManager]::SecurityProtocol = "tls12, tls11, tls"
           Invoke-WebRequest -OutFile python-3.7.9.exe -Uri https://www.python.org/ftp/python/3.7.9/python-3.7.9.exe
           Start-Process -Wait ".\python-3.7.9.exe" -ArgumentList "/quiet TargetDir=C:\Python36-32 InstallAllUsers=1 Include_launcher=0 Include_doc=0 Include_tcltk=0 Include_test=0"
